--- a/src/components/IconButton/IconButton.module.css
+++ b/src/components/IconButton/IconButton.module.css
@@ -5,7 +5,6 @@
   height: 2rem;
   cursor: pointer;
   padding: 0.25rem;
-  background-color: var(--buttonGood);
 }
 
 .container:disabled {
@@ -17,4 +16,12 @@
   display: block;
   width: 100%;
   height: 100%;
+}
+
+.add {
+  background-color: var(--buttonGood);
+}
+
+.delete {
+  background-color: var(--buttonBad);
 }
