--- a/src/components/Summary/Summary.module.css
+++ b/src/components/Summary/Summary.module.css
@@ -3,10 +3,6 @@
   flex-direction: column;
   border: 1px solid var(--primary);
   border-radius: var(--headerRadius);
-  /* height: fit-content; */
-  /* overflow: hidden; */
-  /* position: sticky; */
-  /* top: 0; */
   max-height: 100%;
   overflow-y: hidden;
 }
@@ -41,8 +37,9 @@
   color: var(--onBackground);
   text-decoration: none;
   background-color: var(--table);
-  padding: 0.5rem;
+  padding: 0.3rem;
   cursor: pointer;
+  font-size: 0.8rem;
   transition: background-color var(--transitionSpeed),
     color var(--transitionSpeed);
 }
