--- a/src/views/Products/products.module.css
+++ b/src/views/Products/products.module.css
@@ -37,45 +37,59 @@
   border-radius: var(--inputRadius);
   border: 1px solid var(--onPrimary);
   outline: none;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .inputSmall {
   width: 4rem;
 }
 
-.tableContainer {
-  max-height: 100%;
-  overflow-y: auto;
-  overflow-x: hidden;
-  display: block;
-  box-sizing: border-box;
-}
-
-.table {
-  border-collapse: collapse;
-  width: 100%;
-}
-
 .tableHead {
-  position: sticky;
-  top: 0;
   background-color: var(--primary);
-  text-align: left;
+  display: flex;
+  justify-content: space-between;
+  font-weight: bold;
+  width: 100%;
+  gap: 2rem;
 }
 
 .tableHeadItem {
   padding: 0.5rem 0.5rem;
 }
 
-.tableBodyRow {
-  background-color: var(--table);
+.table {
+  max-height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
-.tableBodyRow:nth-child(even) {
+.tableRow {
+  background-color: var(--table);
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
+.tableRow:nth-child(even) {
   background-color: var(--tableEven);
 }
 
-.tableBodyItem {
+.tableItem {
   color: white;
   padding: 0.25rem 0.5rem;
+}
+
+.tableColumn {
+  flex: 1;
+}
+
+.tableColumnSmall {
+  width: 5rem;
+}
+
+.tableColumnIcon {
+  width: 2rem;
 }
