--- a/src/components/RecipeItem/RecipeItem.module.css
+++ b/src/components/RecipeItem/RecipeItem.module.css
@@ -63,3 +63,52 @@
 .inputSmall {
   width: 3rem;
 }
+
+.tableHead {
+  background-color: var(--primary);
+  display: flex;
+  justify-content: space-between;
+  font-weight: bold;
+  width: 100%;
+  gap: 2rem;
+}
+
+.tableHeadItem {
+  padding: 0.5rem 0.5rem;
+}
+
+.table {
+  max-height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+}
+
+.tableRow {
+  background-color: var(--table);
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
+.tableRow:nth-child(even) {
+  background-color: var(--tableEven);
+}
+
+.tableItem {
+  color: white;
+  padding: 0.25rem 0.5rem;
+}
+
+.tableColumn {
+  flex: 1;
+}
+
+.tableColumnSmall {
+  width: 5rem;
+}
+
+.tableColumnIcon {
+  width: 2rem;
+}
