--- a/src/views/Products/products.module.css
+++ b/src/views/Products/products.module.css
@@ -1,10 +1,11 @@
 .container {
   display: flex;
   justify-content: center;
+  align-items: flex-start;
   gap: 0.25rem;
   overflow-y: hidden;
   padding-top: 4rem;
-  max-height: 100dvh;
+  height: 100dvh;
   box-sizing: border-box;
 }
 
