--- a/src/views/Recipes/Recipes.module.css
+++ b/src/views/Recipes/Recipes.module.css
@@ -1,10 +1,11 @@
 .container {
   display: flex;
   justify-content: center;
+  align-items: flex-start;
   gap: 0.25rem;
   overflow-y: hidden;
   padding-top: 4rem;
-  max-height: 100dvh;
+  height: 100dvh;
   box-sizing: border-box;
 }
 
@@ -41,6 +42,5 @@
   padding: 0.2rem 0.2rem;
   border-radius: var(--inputRadius);
   border: 1px solid var(--onPrimary);
-  outline: none;
   box-sizing: border-box;
 }
