--- a/src/views/Products/products.module.css
+++ b/src/views/Products/products.module.css
@@ -46,6 +46,11 @@
   width: 4rem;
 }
 
+.iconButton {
+  width: 2rem;
+  height: 2rem;
+}
+
 .tableHead {
   background-color: var(--primary);
   display: flex;
