--- a/src/views/Meals/Meals.module.css
+++ b/src/views/Meals/Meals.module.css
@@ -3,16 +3,21 @@
   justify-content: center;
   align-items: flex-start;
   gap: 0.25rem;
-  overflow-y: hidden;
+  overflow: hidden;
   padding-top: 4rem;
   box-sizing: border-box;
-  overflow-x: hidden;
+  height: 100dvh;
+  max-width: 100dvw;
 }
 
 .daysContainer {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
   align-items: flex-start;
   gap: 1px;
+  max-width: 100%;
+  height: 100%;
+  overflow: auto;
 }
 
 .dayContainer {
