--- a/src/components/ProductsSummary/ProductsSummary.module.css
+++ b/src/components/ProductsSummary/ProductsSummary.module.css
@@ -14,6 +14,7 @@
   background-color: var(--primary);
   width: 100%;
   box-sizing: border-box;
+  gap: 1rem;
 }
 
 .headerText {
@@ -30,10 +31,9 @@
 
 .input {
   width: 2rem;
-  border-color: black !important;
-  background-color: white !important;
-  color: black !important;
-  padding: 0 0.25rem !important;
+  border: 1px solid var(--onPrimary);
+  border-radius: var(--inputRadius);
+  background-color: var(--onBackground);
 }
 
 .table {
