--- a/src/components/MealsItem/MealsItem.module.css
+++ b/src/components/MealsItem/MealsItem.module.css
@@ -22,6 +22,12 @@
   font-size: 1rem;
 }
 
+.mealContainer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
 .mealTypeContainer {
   display: flex;
   justify-content: space-between;
@@ -69,4 +75,11 @@
 
 .tableRow:nth-child(even) {
   background-color: var(--tableEven);
+}
+
+.select {
+  color: var(--onPrimary);
+  border-radius: var(--inputRadius);
+  border: 1px solid var(--onPrimary);
+  padding: 0.25rem 0.5rem;
 }
