--- a/src/components/MealsItem/MealsItem.module.css
+++ b/src/components/MealsItem/MealsItem.module.css
@@ -16,10 +16,12 @@
   align-items: center;
   gap: 0.5rem;
   width: 100%;
+  padding: 0.25rem 0;
 }
 
 .day {
   font-size: 1rem;
+  margin: 0;
 }
 
 .mealContainer {
