--- a/src/components/RecipeItem/RecipeItem.module.css
+++ b/src/components/RecipeItem/RecipeItem.module.css
@@ -127,3 +127,10 @@
 .tableColumnIcon {
   width: 2rem;
 }
+
+.select {
+  color: var(--onPrimary);
+  border-radius: var(--inputRadius);
+  border: 1px solid var(--onPrimary);
+  padding: 0.25rem 0.5rem;
+}
