--- a/src/components/WeekSummary/WeekSummary.module.css
+++ b/src/components/WeekSummary/WeekSummary.module.css
@@ -10,11 +10,34 @@
 }
 
 .header {
-  font-size: 1.25rem;
+  position: relative;
+  display: flex;
   background-color: var(--primary);
-  padding: 0.25rem 0;
+  padding: 0.5rem 0;
+  align-items: center;
+  justify-content: center;
+}
+
+.headerTitle {
+  font-size: 1.25rem;
   margin: 0;
   text-align: center;
+  flex: 1;
+}
+
+.buttonsContainer {
+  position: absolute;
+  right: 1rem;
+  display: flex;
+  gap: 0.5rem;
+}
+
+.button {
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: var(--inputRadius);
+  cursor: pointer;
+  box-sizing: border-box;
 }
 
 .table {
